--- a/document.html
+++ b/document.html
@@ -13,12 +13,34 @@
   <body>
     <header>
       <nav>
-        <img src="./images/DD.png" class="logo">
-        <a href="homepage.html" target="_blank">Home</a>
+        <img src="./images/DD.png" class="logo" />
+        <a href="index.html" target="_blank">Home</a>
         <a href="about.html" target="_blank">About</a>
         <a href="document.html" target="_blank">Documents</a>
         <a href="references.html" target="_blank">References</a>
-        <a href="photogallery.htmnload>Download Certification 2</a>
+        <a href="photogallery.html" target="_blank">Photo Gallery</a>
+        <a href="contactme.html" target="_blank">Contact Me</a>
+      </nav>
+      <!-- Navigation bar or logo can be added here -->
+    </header>
+
+    <main>
+      <section id="documents">
+        <h1>Documents</h1>
+        <div class="document">
+          <img
+            src="./images/WhatsApp Image 2023-07-14 at 20.10.09 (1).jpeg"
+            alt="Certification 1"
+          />
+          <a href="./my cv.docx" download>Download Certification 1</a>
+        </div>
+
+        <div class="document">
+          <img
+            src="./images/WhatsApp Image 2023-07-14 at 20.10.09.jpeg"
+            alt="Certification 2"
+          />
+          <a href="./my cv.docx" download>Download Certification 2</a>
         </div>
 
         <!-- Add more document divs with images and download links -->
