--- a/references.html
+++ b/references.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <img src="./images/DD.png" class="logo">
-        <a href="homepage.html" target="_blank">Home</a>
+        <a href="index.html" target="_blank">Home</a>
         <a href="about.html" target="_blank">About</a>
         <a href="document.html" target="_blank">Documents</a>
         <a href="references.html" target="_blank">References</a>
